AMPSDEV-209 Support Bitbucket Server 5.
- Updated BitbucketProductHandler to detect version 5 and use different
  handling to start the new Spring Boot-based application
- Added MavenGoals.unpackWebappWar to allow directly unpacking webapps
  using the maven-dependency-plugin, to avoid unnecessary copying